<resources>
    <string name="app_name">MyAPP</string>
    <string name="user_phone_hint">请输入电话号码</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="log_in_button_text">登录</string>
    <string name="register_button_text">注册</string>
    <string name="user_account_hint">请输入账号ID或手机号</string>
    <string name="title_activity_menu">主菜单</string>
    <string name="title_people">联系人</string>
    <string name="title_group">群组</string>
    <string name="title_moments">朋友圈</string>
    <string name="title_activity_people_chat_item.xml">people_chat_item.xml</string>
    <string name="add_image">发送图片</string>

    <string name="register_dialog_title">注册</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_name">请输入账号名称</string>
    <string name="enter_password">请输入密码</string>
    <string name="avatar_description">头像图片</string>
    <string name="select_avatar_button">选择头像图片</string>
    <string name="image_desc">图像</string>
</resources>